# gchess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  umbrelloUML.xmi
cpp/: .gitignore  CMakeLists.txt  Doxyfile
cpp/src/: CMakeLists.txt  gamemanager.cpp  gamemanager.h  main.cpp  utils.h
cpp/src/board/: board.cpp  move.cpp  move.h  tile.h
cpp/src/engine/: movelayer.h
cpp/src/gui/newgamedialog/: newgamedialog.cpp
cpp/src/gui/promotiondialog/: promotiondialog.ui
cpp/src/gui/widgets/: CMakeLists.txt
cpp/src/gui/widgets/aipane/: aipane.cpp  aipane.ui
cpp/src/gui/widgets/chessboard/: chessboard.cpp  chessboard.h
cpp/src/piece/: king.h  knight.cpp  linepiece.cpp  pawn.cpp  pawn.h  piece.h  queen.cpp  rook.h
images/: generate_chessboard.m
java/: .gitignore  README.md  build.xml  nbbuild.xml
java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
java/nbproject/private/: private.xml
java/src/com/haaivda/gchess/: Alliance.java
java/src/com/haaivda/gchess/board/: Board.java  BoardUtils.java  Tile.java
java/src/com/haaivda/gchess/pieces/: Bishop.java  King.java  Piece.java  Rook.java
java/src/com/haaivda/gchess_tutorial/: Alliance.java  gChessTutorial.java
java/src/com/haaivda/gchess_tutorial/board/: Board.java  BoardUtils.java  Move.java  Tile.java
java/src/com/haaivda/gchess_tutorial/engine/: Alliance.java
java/src/com/haaivda/gchess_tutorial/engine/board/: Board.java  BoardUtils.java  Move.java  Tile.java
java/src/com/haaivda/gchess_tutorial/engine/pieces/: Bishop.java  King.java  Knight.java  Pawn.java  Piece.java  Queen.java  Rook.java
java/src/com/haaivda/gchess_tutorial/engine/player/: BlackPlayer.java  MoveStatus.java  MoveTransition.java  Player.java  WhitePlayer.java
java/src/com/haaivda/gchess_tutorial/gui/: GameHistoryPanel.java  Table.java  TakenPiecesPanel.java
java/src/com/haaivda/gchess_tutorial/pieces/: Bishop.java  King.java  Knight.java  Pawn.java  Piece.java  Queen.java  Rook.java
java/src/com/haaivda/gchess_tutorial/player/: BlackPlayer.java  MoveStatus.java  MoveTransition.java  Player.java  WhitePlayer.java
java_tutorial/: README.md
java_tutorial/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
java_tutorial/nbproject/private/: private.properties  private.xml
java_tutorial/src/com/haaivda/gchess/board/: Move.java
java_tutorial/src/com/haaivda/gchess/pieces/: Knight.java  Pawn.java  Piece.java  Queen.java
src/: CMakeLists.txt  config.h.in  gamemanager.cpp  gamemanager.h  main.cpp  operators.cpp  operators.h  utils.cpp  utils.h
src/board/: board.cpp  board.h  field.cpp  field.h  move.cpp  move.h  tile.cpp  tile.h
src/engine/: CMakeLists.txt  aiplayer.cpp  aiplayer.h  movelayer.cpp  moveply.cpp  moveply.h  movetree.cpp  movetree.h
src/game/: CMakeLists.txt  bishop.cpp  bishop.h  field.cpp  field.h  game.cpp  game.h  gamemanager.cpp  gamemanager.h  king.cpp  king.h  knight.cpp  knight.h  linepiece.cpp  linepiece.h  move.cpp  move.h  operators.cpp  operators.h  pawn.cpp  pawn.h  piece.cpp  piece.h  player.cpp  player.h  queen.cpp  queen.h  rook.cpp  rook.h  types.h  utils.cpp  utils.h
src/game/board/: board.cpp  board.h  field.cpp  field.h  move.cpp  move.h  tile.cpp  tile.h
src/game/piece/: CMakeLists.txt  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  linepiece.cpp  linepiece.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
src/game/player/: player.cpp  player.h
src/game/tests/: CMakeLists.txt
src/gui/: CMakeLists.txt  chessboard.cpp  chessboard.h  chessboard.ui  chessboard2.cpp  chessboard2.h  chessboard2.ui  chessgame.cpp  chessgame.h  chesslabel.cpp  chesslabel.h  chesswindow.cpp  chesswindow.h  chesswindow.ui  clickablelabel.cpp  clickablelabel.h  piecelabel.cpp  piecelabel.h  promotiondialog.cpp  promotiondialog.h
src/gui/newgamedialog/: newgamedialog.h  newgamedialog.ui
src/gui/promotiondialog/: promotiondialog.cpp
src/gui/widgets/aipane/: aipane.h
src/include/: CMakeLists.txt  engine.h  game.h  gui.h
src/piece/: bishop.cpp  king.cpp  knight.cpp  knight.h  linepiece.cpp  linepiece.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.h  rook.cpp  rook.h
src/player/: player.cpp  player.h
tests/: CMakeLists.txt  field_test.cpp
